--- a/index.html
+++ b/index.html
@@ -1,10 +1,81 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My GitHub Pages Site</title>
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
-  </body>
+<head>
+    <title>Fine-Tuning Stable Diffusion on Gaming Characters</title>
+</head>
+<body>
+
+<h1>Fine-Tuning Stable Diffusion on Gaming Characters</h1>
+
+<br>
+
+<h2>Introduction</h2>
+
+<p>Welcome to our repository dedicated to fine-tuning Stable Diffusion, an open-source neural network for generating high-quality images. This project aims to enhance the capabilities of Stable Diffusion by fine-tuning it with gaming asset datasets.</p>
+
+<p>Stable Diffusion is a deep learning, text-to-image model released in 2022 based on diffusion techniques. It is primarily used to generate detailed images conditioned on text descriptions, though it can also be applied to other tasks such as inpainting, outpainting, and generating image-to-image translations guided by a text prompt (Wikipedia contributors, 2024).</p>
+
+<br>
+
+<h2>Getting Started</h2>
+
+<h3>Prerequisites</h3>
+
+<ul>
+    <li>Python 3.9+</li>
+    <li>Installing the dependencies listed in <code>requirements.txt</code>.</li>
+</ul>
+
+<pre>
+<code>
+pip install -r requirements.txt
+</code>
+</pre>
+
+<br>
+
+<h2>Data Preparation</h2>
+
+<p>To prepare your data for fine-tuning the Stable Diffusion model, follow these steps:</p>
+
+<h3>Step 1: Organize Your Image Dataset</h3>
+
+<p>Place the images you wish to use for fine-tuning inside the <code>./data/images/</code> folder. Ensure that your dataset consists of high-quality images relevant to the gaming domain or any other style you're targeting.</p>
+
+<h3>Step 2: Write Prompt for Images</h3>
+
+<h4>Single Prompt (for Dreambooth)</h4>
+
+<p>In Dreambooth, only a single well-defined prompt is used for fine-tuning all the images. This ensures that the model deeply understands the specific theme we are aiming for.</p>
+
+<h4>Multiple Prompt Generation using BLIP (for Keras-CV)</h4>
+
+<p>To implement stable diffusion with Keras-CV, we require a separate prompt for each image in our dataset, in contrast to the approach in Dreambooth. We utilize the BLIP model to automatically generate descriptive captions for each image in the dataset. You can find the script in <code>./preparation/auto prompting using BLIP.ipynb</code> and follow the step-by-step guide for generating the prompts.</p>
+
+<br>
+
+<h2>Fine-Tuning Process</h2>
+
+<h3>Using Dreambooth</h3>
+
+<p>To do.</p>
+
+<h3>Using Keras-CV</h3>
+
+<p>To do.</p>
+
+<br>
+
+<h2>Evaluation</h2>
+
+<p>To do.</p>
+
+<p align="center">
+  <img src="https://github.com/SoheilMohammadpour231754/Stable-Diffusion/generated%20artworks/dreambooth/a%20knight%20in%20purple%2C%20black%20and%20white%20with%20an%20elaborate%20helmet%20on%20his%20head.png" alt="Knight with helmet" width="200">
+  <img src="https://github.com/SoheilMohammadpour231754/Stable-Diffusion/generated%20artworks/dreambooth/a%20demon%20dressed%20in%20red%20and%20holding%20a%20sword.png" alt="Demon with sword" width="200" hspace="20">
+  <img src="https://github.com/SoheilMohammadpour231754/Stable-Diffusion/generated%20artworks/dreambooth/Elfs%20with%20arrows.png" alt="Elfs with arrows" width="200" hspace="20">
+  <img src="https://github.com/SoheilMohammadpour231754/Stable-Diffusion/generated%20artworks/dreambooth/Gandalf%20the%20gray.png" alt="Gandalf the gray" width="200" hspace="20">
+</p>
+
+</body>
 </html>
