--- a/index.html
+++ b/index.html
@@ -1,81 +1,99 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fine-Tuning Stable Diffusion on Gaming Characters</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
+    <div class="container">
+        <h1>Fine-Tuning Stable Diffusion on Gaming Characters</h1>
+        <br>
 
-<h1>Fine-Tuning Stable Diffusion on Gaming Characters</h1>
+        <h2>Introduction</h2>
+        <p>Welcome to our repository dedicated to fine-tuning Stable Diffusion, an open-source neural network for generating high-quality images. This project aims to enhance the capabilities of Stable Diffusion by fine-tuning it with gaming asset datasets.</p>
+        <p>Stable Diffusion is a deep learning, text-to-image model released in 2022 based on diffusion techniques. It is primarily used to generate detailed images conditioned on text descriptions, though it can also be applied to other tasks such as inpainting, outpainting, and generating image-to-image translations guided by a text prompt (Wikipedia contributors, 2024).</p>
+        <br>
 
-<br>
+        <h2>Getting Started</h2>
+        <h3>Prerequisites</h3>
+        <ul>
+            <li>Python 3.9+</li>
+            <li>Installing the dependencies listed in <code>requirements.txt</code>.</li>
+        </ul>
+        <pre><code>pip install -r requirements.txt</code></pre>
+        <br>
 
-<h2>Introduction</h2>
+        <h2>Data Preparation</h2>
+        <p>To prepare your data for fine-tuning the Stable Diffusion model, follow these steps:</p>
+        <h3>Step 1: Organize Your Image Dataset</h3>
+        <p>Place all the images you wish to use for fine-tuning inside the <code>./data/images/</code> folder.</p>
+        <h3>Step 2: Write Prompt for Images</h3>
+        <ul>
+            <li>Single Prompt (for Dreambooth): In Dreambooth, only a single well-defined prompt is used for fine-tuning all the images.</li>
+            <li>Multiple Prompt (for Keras-CV): To implement stable diffusion with Keras-CV, we require a separate prompt for each image in our dataset. Utilize the BLIP model to automatically generate descriptive captions for each image in the dataset (using the <code>./preparation/auto prompting using BLIP.ipynb</code> script).</li>
+        </ul>
+        <br>
 
-<p>Welcome to our repository dedicated to fine-tuning Stable Diffusion, an open-source neural network for generating high-quality images. This project aims to enhance the capabilities of Stable Diffusion by fine-tuning it with gaming asset datasets.</p>
+        <h2>Fine-Tuning Process</h2>
+        <h3>Using Dreambooth</h3>
+        <p>In this approach, the Stable Diffusion model got fine-tuned using Dreambooth. It involves setting up the model from huggingface and fine-tuning it with given gaming characters. The fine-tuned model then is used to generate new artwork related to gaming characters.</p>
+        <h3>Using Keras-CV</h3>
+        <p>In this approach, the Stable Diffusion model got fine-tuned using TensorFlow's Keras framework. A custom class is used for handling the training processes (including loss calculation and gradient updates) which updates part of the weight of the the diffusion model.</p>
+        <br>
 
-<p>Stable Diffusion is a deep learning, text-to-image model released in 2022 based on diffusion techniques. It is primarily used to generate detailed images conditioned on text descriptions, though it can also be applied to other tasks such as inpainting, outpainting, and generating image-to-image translations guided by a text prompt (Wikipedia contributors, 2024).</p>
+        <h2>Evaluation</h2>
+        <p>The fine-tuned stable diffusion model has generated a set of character images for evaluation. The images confirm the model's ability to:</p>
+        <ul>
+            <li>Presence of Requested Object: Each image clearly displays the intended fantasy characters.</li>
+            <li>Variation in Design: There's evident variation among characters, with differences in shapes and colors showcased.</li>
+            <li>Background Simplicity: Characters are set against solid, non-complex backgrounds for clarity.</li>
+            <li>Separation from Background: The subjects are well-differentiated from the backdrop, ensuring easy discernibility.</li>
+        </ul>
+        <h3>Character Variation</h3>
+        <!-- Character Variation Table -->
+        <table class="table table-bordered">
+            <tr>
+                <td><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/a%20demon%20dressed%20in%20red%20and%20holding%20a%20sword.png" alt="Demon with sword" width="200"></td>
+                <td><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Elfs%20with%20arrows.png" alt="Elfs with arrows" width="200"></td>
+                <td><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Gandalf%20the%20gray.png" alt="Gandalf the gray" width="200"></td>
+            </tr>
+            <tr>
+                <td align="center">A demon</td>
+                <td align="center">Two Elfs</td>
+                <td align="center">A wizard</td>
+            </tr>
+        </table>
+        <h3>Colour Variation of Same Characters</h3>
+        <!-- Colour Variation Table -->
+        <table class="table table-bordered">
+            <tr>
+                <td><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Knights%20in%20blue%2C%20black%20and%20white%20with%20an%20elaborate%20helmet%20on%20their%20head.png" width="200"></td>
+                <td><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Knights%20in%20red%2C%20black%20and%20white%20with%20an%20elaborate%20helmet%20on%20their%20head.png" width="200"></td>
+                <td><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Knights%20in%20green%2C%20black%20and%20white%20with%20an%20elaborate%20helmet%20on%20their%20head.png" width="200"></td>
+            </tr>
+            <tr>
+                <td align="center">Blue Knights</td>
+                <td align="center">Red Knights</td>
+                <td align="center">Green Knights</td>
+            </tr>
+        </table>
+        <br>
 
-<br>
-
-<h2>Getting Started</h2>
-
-<h3>Prerequisites</h3>
-
-<ul>
-    <li>Python 3.9+</li>
-    <li>Installing the dependencies listed in <code>requirements.txt</code>.</li>
-</ul>
-
-<pre>
-<code>
-pip install -r requirements.txt
-</code>
-</pre>
-
-<br>
-
-<h2>Data Preparation</h2>
-
-<p>To prepare your data for fine-tuning the Stable Diffusion model, follow these steps:</p>
-
-<h3>Step 1: Organize Your Image Dataset</h3>
-
-<p>Place the images you wish to use for fine-tuning inside the <code>./data/images/</code> folder. Ensure that your dataset consists of high-quality images relevant to the gaming domain or any other style you're targeting.</p>
-
-<h3>Step 2: Write Prompt for Images</h3>
-
-<h4>Single Prompt (for Dreambooth)</h4>
-
-<p>In Dreambooth, only a single well-defined prompt is used for fine-tuning all the images. This ensures that the model deeply understands the specific theme we are aiming for.</p>
-
-<h4>Multiple Prompt Generation using BLIP (for Keras-CV)</h4>
-
-<p>To implement stable diffusion with Keras-CV, we require a separate prompt for each image in our dataset, in contrast to the approach in Dreambooth. We utilize the BLIP model to automatically generate descriptive captions for each image in the dataset. You can find the script in <code>./preparation/auto prompting using BLIP.ipynb</code> and follow the step-by-step guide for generating the prompts.</p>
-
-<br>
-
-<h2>Fine-Tuning Process</h2>
-
-<h3>Using Dreambooth</h3>
-
-<p>To do.</p>
-
-<h3>Using Keras-CV</h3>
-
-<p>To do.</p>
-
-<br>
-
-<h2>Evaluation</h2>
-
-<p>To do.</p>
-
-<p align="center">
-  <img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/a%20knight%20in%20purple%2C%20black%20and%20white%20with%20an%20elaborate%20helmet%20on%20his%20head.png" alt="Knight with helmet" width="200">
-  <img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/a%20demon%20dressed%20in%20red%20and%20holding%20a%20sword.png" alt="Demon with sword" width="200" hspace="20">
-  <img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Elfs%20with%20arrows.png" alt="Elfs with arrows" width="200" hspace="20">
-  <img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Gandalf%20the%20gray.png" alt="Gandalf the gray" width="200" hspace="20">
-</p>
-
+        <h2>Final Report</h2>
+        <p>The final step of this challenge is for each team member to create a web page using GitHub page to showcase the results of the challenge.</p>
+        <ul>
+            <li>Soheil Mohammadpour</li>
+            <li>Placeholder</li>
+            <li>Placeholder</li>
+            <li>Placeholder</li>
+        </ul>
+    </div>
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
