--- a/index.html
+++ b/index.html
@@ -10,21 +10,12 @@
 <body>
     <div class="container">
         <h1>Fine-Tuning Stable Diffusion on Gaming Characters</h1>
-        <br>
+        <hr>
 
         <h2>Introduction</h2>
         <p>Welcome to our repository dedicated to fine-tuning Stable Diffusion, an open-source neural network for generating high-quality images. This project aims to enhance the capabilities of Stable Diffusion by fine-tuning it with gaming asset datasets.</p>
         <p>Stable Diffusion is a deep learning, text-to-image model released in 2022 based on diffusion techniques. It is primarily used to generate detailed images conditioned on text descriptions, though it can also be applied to other tasks such as inpainting, outpainting, and generating image-to-image translations guided by a text prompt (Wikipedia contributors, 2024).</p>
-        <br>
-
-        <h2>Getting Started</h2>
-        <h3>Prerequisites</h3>
-        <ul>
-            <li>Python 3.9+</li>
-            <li>Installing the dependencies listed in <code>requirements.txt</code>.</li>
-        </ul>
-        <pre><code>pip install -r requirements.txt</code></pre>
-        <br>
+        <hr>
 
         <h2>Data Preparation</h2>
         <p>To prepare your data for fine-tuning the Stable Diffusion model, follow these steps:</p>
@@ -35,14 +26,14 @@
             <li>Single Prompt (for Dreambooth): In Dreambooth, only a single well-defined prompt is used for fine-tuning all the images.</li>
             <li>Multiple Prompt (for Keras-CV): To implement stable diffusion with Keras-CV, we require a separate prompt for each image in our dataset. Utilize the BLIP model to automatically generate descriptive captions for each image in the dataset (using the <code>./preparation/auto prompting using BLIP.ipynb</code> script).</li>
         </ul>
-        <br>
+        <hr>
 
         <h2>Fine-Tuning Process</h2>
         <h3>Using Dreambooth</h3>
         <p>In this approach, the Stable Diffusion model got fine-tuned using Dreambooth. It involves setting up the model from huggingface and fine-tuning it with given gaming characters. The fine-tuned model then is used to generate new artwork related to gaming characters.</p>
         <h3>Using Keras-CV</h3>
         <p>In this approach, the Stable Diffusion model got fine-tuned using TensorFlow's Keras framework. A custom class is used for handling the training processes (including loss calculation and gradient updates) which updates part of the weight of the the diffusion model.</p>
-        <br>
+        <hr>
 
         <h2>Evaluation</h2>
         <p>The fine-tuned stable diffusion model has generated a set of character images for evaluation. The images confirm the model's ability to:</p>
@@ -56,9 +47,9 @@
         <!-- Character Variation Table -->
         <table class="table table-bordered">
             <tr>
-                <td><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/a%20demon%20dressed%20in%20red%20and%20holding%20a%20sword.png" alt="Demon with sword" width="200"></td>
-                <td><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Elfs%20with%20arrows.png" alt="Elfs with arrows" width="200"></td>
-                <td><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Gandalf%20the%20gray.png" alt="Gandalf the gray" width="200"></td>
+                <td style="text-align: center;"><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/a%20demon%20dressed%20in%20red%20and%20holding%20a%20sword.png" alt="Demon with sword" width="200"></td>
+                <td style="text-align: center;"><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Elfs%20with%20arrows.png" alt="Elfs with arrows" width="200"></td>
+                <td style="text-align: center;"><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Gandalf%20the%20gray.png" alt="Gandalf the gray" width="200"></td>
             </tr>
             <tr>
                 <td align="center">A demon</td>
@@ -70,9 +61,9 @@
         <!-- Colour Variation Table -->
         <table class="table table-bordered">
             <tr>
-                <td><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Knights%20in%20blue%2C%20black%20and%20white%20with%20an%20elaborate%20helmet%20on%20their%20head.png" width="200"></td>
-                <td><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Knights%20in%20red%2C%20black%20and%20white%20with%20an%20elaborate%20helmet%20on%20their%20head.png" width="200"></td>
-                <td><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Knights%20in%20green%2C%20black%20and%20white%20with%20an%20elaborate%20helmet%20on%20their%20head.png" width="200"></td>
+                <td style="text-align: center;"><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Knights%20in%20blue%2C%20black%20and%20white%20with%20an%20elaborate%20helmet%20on%20their%20head.png" width="200"></td>
+                <td style="text-align: center;"><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Knights%20in%20red%2C%20black%20and%20white%20with%20an%20elaborate%20helmet%20on%20their%20head.png" width="200"></td>
+                <td style="text-align: center;"><img src="https://raw.githubusercontent.com/SoheilMohammadpour231754/Stable-Diffusion/main/generated%20artworks/dreambooth/Knights%20in%20green%2C%20black%20and%20white%20with%20an%20elaborate%20helmet%20on%20their%20head.png" width="200"></td>
             </tr>
             <tr>
                 <td align="center">Blue Knights</td>
@@ -80,16 +71,8 @@
                 <td align="center">Green Knights</td>
             </tr>
         </table>
-        <br>
+        <hr>
 
-        <h2>Final Report</h2>
-        <p>The final step of this challenge is for each team member to create a web page using GitHub page to showcase the results of the challenge.</p>
-        <ul>
-            <li>Soheil Mohammadpour</li>
-            <li>Placeholder</li>
-            <li>Placeholder</li>
-            <li>Placeholder</li>
-        </ul>
     </div>
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
